force-app/main/default/objects/custom_create153__c/custom_create153__c.object-meta.xml
<CustomObject>
    <label>Custom created object153</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects153</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>