force-app/main/default/objects/custom_create153__c/fields/custom_create_153field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_153field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 153field506</label>
    <type>Checkbox</type>
</CustomField>